# conductor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_REFERENCE.md  COVERAGE_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  PICKLE_MIGRATION_PLAN.md  QUICK_START.md  README  README.md  SESSION_SUMMARY.md  SETUP_NOTES.md  TDD_APPROACH.md  conductor.org  echo  index.html  params.json  pyproject.toml  pytest.ini  setup.py
Go/: go.mod  go.sum
Python/: setup.py
conductor/: __init__.py  client.py  conductor.py  config.py  json_protocol.py  phase.py  player.py  protocol.py  reporter.py  retval.py  run.py  step.py  test.py
config/: client1.cfg  client2.cfg  client3.cfg  test1.cfg
docs/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_REFERENCE.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  QUICK_START.md
examples/: README.md  database_server.cfg  database_test.cfg  load_generator1.cfg  web_load_test.cfg  web_server.cfg
scripts/: conduct  player
tests/: __init__.py  test_100_percent_coverage.py  test_audit.py  test_build_system.py  test_cli_integration.py  test_client.py  test_client_100_coverage.py  test_client_edge_cases.py  test_conduct_cli.py  test_config.py  test_config_edge_cases.py  test_detailed_audit.py  test_hypothesis.py  test_integration.py  test_json_protocol.py  test_json_protocol_100_coverage.py  test_json_protocol_edge_cases.py  test_json_protocol_edge_cases_extended.py  test_json_protocol_hypothesis.py  test_json_protocol_integration.py  test_json_protocol_version.py  test_network_errors.py  test_no_setup_py_needed.py  test_phase.py  test_phase_hypothesis.py  test_player_cli.py  test_protocol.py  test_remove_placeholders.py  test_reporter.py  test_retval.py  test_retval_100_coverage.py  test_retval_edge_cases.py  test_run.py  test_security_scanning.py  test_step.py  test_step_edge_cases.py  test_step_extended_edge_cases.py  test_step_hypothesis.py  test_test.py  test_unused_methods.py
(+38 files in other folders)
